Sidebar items center aligned at new width.Profiles corrected accordingly

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -26,5 +26,6 @@
 .avatar-square-sidebar {
   width: 50px;
   height: 50px;
+  margin-top: -20px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
 }
